--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "build-storybook": "build-storybook",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "node app.ts"
   },
   "dependencies": {
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
